--- a/src/main/resources/templates/cliente/home.html
+++ b/src/main/resources/templates/cliente/home.html
@@ -8,27 +8,52 @@
 </head>
 <meta charset="UTF-8"></meta>
 
-<body>
-	<div class="grid-contenedor">
-		<div class="hero-nav">
-			<div class="padre-navegacion">
-				<nav class="navegacion">
-					<a th:href="@{/home}">Inicio</a>
+<body class="overflow-hidden">
+
+    <header class="hero-header-menu desktop">
+        <div class="contenedor contenedor-menu">
+            <div class="contenido-menu">
+                <nav class="menu">
+                    <a th:href="@{/home}">Inicio</a>
 					<a th:href="@{/vehiculos/list}">Mis Vehiculos</a>
 					<a th:href="@{/reservas/list}">Mis Reservas</a>
-					<a href="#">Perfil</a>
+					<a th:href="@{/cuenta}">Perfil</a>
 					<a th:href="@{/logout}">Cerrar Sesion</a>
-				</nav>
-			</div>
-		</div>
-		<div class="contenedor contenedor-index">
-			<h2 th:text="Bienvenido+' '+${nombres}+' '+${apellidos}"></h2>
-			<p>¿Para donde vamos?</p>
-			<a th:href="@{reservas/list}">Reservar</a>
-		</div>
-	</div>
-	
-	
+                </nav>
+                <div class="menu-perfil">
+                    <p th:text="${username}"></p>
+                    <i class="fas fa-user-circle"></i>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="fondo-imagen-registro-cliente">
+        <div class="hero-registro fondo-home color-listado-clientes">
+            <div class="contenedor contenedor-home">
+				<h2 th:text="Bienvenido+' '+${nombres}+' '+${apellidos}"></h2>
+				<p>¿Para donde vamos?</p>
+				<a th:href="@{reservas/list}">Reservar</a>
+            </div>
+        </div>
+    </div>
+	<div th:if="${permiso}" class="permiso" th:text="${permiso}"></div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <script src="../js/app.js"></script>
+    <script>
+	if($('.permiso').length > 0){
+    	var permiso = $('.permiso').text();
+		Swal.fire({
+	        title: 'Permiso denegado!',
+	        icon: 'info',
+	        html: `<p>Solo tienen acceso los usuarios de tipo ${permiso}</p>`,
+	        confirmButtonText: 'Aceptar',
+	        customClass: 'swal-wide-registro-alerta',
+	        
+	    })
+	}
+    </script>
 </body>
 
 </html>
