--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -48,7 +48,6 @@
 
                     <div class="centrar-text">
                         <input type="submit" value="Ingresar">
-                        <p th:if="${error}" th:text="${error}"></p>
                     </div>
 
 
@@ -59,7 +58,40 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-	<script th:src="@{/js/app.js}"></script>
+    
+	<script type="text/javascript">
+		Swal.fire({
+	        title: 'Tienes que iniciar sesión!',
+	        icon: 'info',
+	        html: `<p>Para poder acceder a esta página necesitar iniciar sesión</p>`,
+	        confirmButtonText: 'Aceptar',
+	        customClass: 'swal-wide-registro-alerta',
+	        
+	    })
+	    
+	    $('.btn-registrarse a').on('click', function() {
+        var linkCliente = '/registroCliente';
+        var linkAdmin = '/registroEstacionamiento';
+        Swal.fire({
+            title: '¿Cómo desea registrarse?',
+            showDenyButton: true,
+            showCancelButton: true,
+            confirmButtonText: `Estacionamiento`,
+            denyButtonText: `Cliente`,
+            cancelButtonText: `Volver`,
+            buttonsStyling: false,
+            customClass: 'swal-wide'
+        }).then((result) => {
+            /* Read more about isConfirmed, isDenied below */
+            if (result.isConfirmed) {
+                window.location.href = linkAdmin;
+            } else if (result.isDenied) {
+                window.location.href = linkCliente;
+            }
+        })
+
+    });
+	</script>
 </body>
 
 </html>
