--- a/src/main/resources/templates/administrador/registro.html
+++ b/src/main/resources/templates/administrador/registro.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="fondo-imagen-registro-cliente">
-        <div class="hero-registro">
+        <div class="hero-registro" style="margin-top: 6rem;">
             <div class="contenedor">
                 <h2>Registro Estacionamiento</h2>
                 <form id="registro-admin" class="form-registro-estacionamiento" th:action="@{/registroEstacionamiento/save}" th:object="${estacionamiento}"  method="post" enctype="multipart/form-data">
