--- a/src/main/resources/templates/cliente/registro.html
+++ b/src/main/resources/templates/cliente/registro.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="fondo-imagen-registro-cliente">
-        <div class="hero-registro">
+        <div class="hero-registro" style="margin-top: 7rem;">
             <div class="contenedor">
                 <h2>Registro Cliente</h2>
                 <form id="registro-cliente" th:action="@{/registro/save}" th:object="${usuario}"  method="post" enctype="multipart/form-data">
