--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -679,7 +679,16 @@ input:focus {
     margin-bottom: 2rem;
 }
 
-.buscador::before {
+/*.buscador::before {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f002";
+    position: absolute;
+    z-index: 1000;
+    bottom: 0;
+    left: 1rem;
+}*/
+.listVehiculos .buscador::before {
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     content: "\f002";
@@ -743,7 +752,7 @@ td{
     cursor: pointer;
     font-size: 14px;
     text-decoration: none;
-    margin-left: 2rem;
+    
     
 }
 .form-creditos a{
@@ -863,4 +872,8 @@ table a{
 #log2{
 	font-weight: 600;
     color: green;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: unset;
+  font-size: unset;
 }
