--- a/src/main/resources/templates/verReserva.html
+++ b/src/main/resources/templates/verReserva.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="fila-detalle">
                         	<p>Duración de la reserva:</p>
-                            <p th:text="*{nhoras}"></p>
+                            <p th:text="*{nhoras}+' '+'hora(s)'"></p>
                         </div>
                         <div class="fila-detalle">
                         	<p>Costo total:</p>
@@ -156,7 +156,7 @@
 	                        </div>
 	                        <div class="fila-detalle">
 	                        	<p>Duración de la reserva:</p>
-	                            <p th:text="*{nhoras}"></p>
+	                            <p th:text="*{nhoras}+' '+'hora(s)'"></p>
 	                        </div>
 	                        <div class="fila-detalle">
 	                        	<p>Costo total:</p>
